tests/compile-fail/derive-debug.stderr
error[E0277]: `U` doesn't implement `std::fmt::Debug`
  --> $DIR/derive-debug.rs:11:36
   |
7  | #[derive(Derivative)]
   |                    - help: consider further restricting type parameter `U`: `, U: std::fmt::Debug`
...
11 |     #[derivative(Debug(format_with="std::fmt::Debug::fmt"))]
   |                                    ^^^^^^^^^^^^^^^^^^^^^^ `U` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `U`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&U`
   = note: required by `std::fmt::Debug::fmt`
